# LLMs-JUDGE

./: .gitignore  config.yaml  pyproject.toml  requirements.txt
data/: personas.json  personas_sample.json
data/books/: index.xlsx  merge_books.py  merged_books_nanotest.json  trans_epub.py
data/books/A Curse for True Love (Once Upon a Broken Heart, #/: chapters.json
data/books/A Fate Inked in Blood (Saga of the Unfated, #1)/: chapters.json
data/books/A Tempest of Tea (Blood and Tea, #1)/: book_metadata.json  chapters.json
data/books/Alchemised/: chapters.json
data/books/All the Colors of the Dark/: chapters.json
data/books/All the Dangerous Things/: chapters.json
data/books/Assistant to the Villain (Assistant to the Villain/: chapters.json
data/books/Atmosphere/: chapters.json
data/books/Beautiful Ugly/: chapters.json
data/books/Blue Sisters/: chapters.json
data/books/Bride (Bride, #1)/: chapters.json
data/books/Bright Young Women/: chapters.json
data/books/Broken Country/: chapters.json
data/personas/: personas_16.json  personas_4_251224.json  personas_8_251231.json
experiment/: batch_experiment.py  experiment.py
src/: batch_run.py  calc_corr.py  config.py  contrast_display_tables.py  discussion.py  greedy_remove_books.py  io_utils.py  json_utils.py  llm_client.py  llm_pool.py  main.py  prompts.py  runner.py  schemas.py  summarize_results.py  trace_logger.py
src/methods/: aggregation.py  incremental.py  summary_based.py
utils/: analyzer.py  assistant.py  llm_base.py  load_persona.py  reddit_test.py  story_summarizer.py
(+88 files in other folders)
